# liveMan.py
import gzip
import logging
import asyncio
import aiohttp
import urllib.parse
import json
import time
from datetime import datetime, timedelta
from http.cookies import SimpleCookie

from protobuf.douyin import *
from liveMan_utils import (
    generateSignature, 
    generateMsToken, 
    get_safe_url, 
    get_ac_signature, 
    execute_js
)

from db import AsyncMongoDBHandler
from gift_deduplicator import AsyncGiftDeduplicator
from message_handler import MessageHandler  # ã€æ–°å¢å¯¼å…¥ã€‘

logger = logging.getLogger("LiveMan")

class AsyncDouyinLiveWebFetcher:
    
    def __init__(self, live_id, db, gift_processor, start_follower_count=0, abogus_file='a_bogus.js', initial_state=None, session=None):

        self.live_id = live_id
        self.start_follower_count = start_follower_count
        self.abogus_file = abogus_file
        self.db = db
        self.gift_processor = gift_processor
        self.handler = None # ã€æ–°å¢ã€‘æ¶ˆæ¯å¤„ç†å™¨å®ä¾‹
        self.initial_state = initial_state       
        
        self.session = None 
        self.ws = None      
        
        self.__ttwid = None
        self.current_room_id = None
        
        self.live_url = "https://live.douyin.com/"
        self.user_agent = "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36"
        self.headers = {'User-Agent': self.user_agent}
        
        self.running = False
        self.session = session # ä¿å­˜å¤–éƒ¨ä¼ å…¥çš„ session
        self._own_session = False # æ ‡è®°æ˜¯å¦æ‹¥æœ‰ session æ‰€æœ‰æƒ
        
        if self.session is None:
            # å¦‚æœæ²¡ä¼ ï¼ˆå…¼å®¹æ—§ä»£ç ï¼‰ï¼Œå°±è‡ªå·±å»ºä¸€ä¸ª
            self.session = aiohttp.ClientSession(headers=self.headers)
            self._own_session = True
    async def get_ttwid(self):
        """è·å– ttwid"""
        if self.__ttwid: return self.__ttwid
        
        if self.session:
            for cookie in self.session.cookie_jar:
                if cookie.key == 'ttwid':
                    self.__ttwid = cookie.value
                    return self.__ttwid
        
        try:
            async with self.session.get(self.live_url, headers=self.headers) as resp:
                pass
            for cookie in self.session.cookie_jar:
                if cookie.key == 'ttwid':
                    self.__ttwid = cookie.value
                    return self.__ttwid
        except Exception as err:
            logger.error(f"ã€Xã€‘è·å–æ¸¸å®¢ ttwid å¤±è´¥: {err}")
        return None

    def get_ac_nonce(self):
        import random
        chars = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
        return ''.join(random.choice(chars) for _ in range(21))
    
    def get_a_bogus(self, url_params: dict):
        url = urllib.parse.urlencode(url_params)
        ctx = execute_js(self.abogus_file)
        return ctx.call("get_ab", url, self.user_agent)

    async def get_room_status(self):
        try:
            ttwid = await self.get_ttwid()
            if not ttwid: pass # å°è¯•æ— ttwidç»§ç»­

            msToken = generateMsToken()
            nonce = self.get_ac_nonce()
            signature = get_ac_signature(self.live_url[8:], nonce, self.user_agent)

            base_url = "https://live.douyin.com/webcast/room/web/enter/"
            params = {
                'aid': '6383',
                'app_name': 'douyin_web',
                'live_id': '1',
                'device_platform': 'web',
                'language': 'zh-CN',
                'enter_from': 'page_refresh',
                'cookie_enabled': 'true',
                'screen_width': '1920',
                'screen_height': '1080',
                'browser_language': 'zh-CN',
                'browser_platform': 'Win32',
                'browser_name': 'Edge',
                'browser_version': '120.0.0.0',
                'web_rid': self.live_id,
                'room_id_str': "",
                'enter_source': '',
                'is_need_double_stream': 'false',
                'insert_task_id': '',
                'live_reason': '',
                'msToken': msToken,
            }

            try:
                params['a_bogus'] = self.get_a_bogus(params)
            except Exception as e:
                logger.warning(f"âš ï¸ a_bogus è®¡ç®—å¤±è´¥: {e}")

            headers = self.headers.copy()
            headers.update({'Referer': f'https://live.douyin.com/{self.live_id}'})
            
            req_cookies = {
                '__ac_nonce': nonce,
                '__ac_signature': signature,
                'msToken': msToken
            }

            async with self.session.get(base_url, params=params, headers=headers, cookies=req_cookies, timeout=10) as resp:
                text = await resp.text() 
                try:
                    json_data = json.loads(text)
                except json.JSONDecodeError:
                    return None
            
            data_core = json_data.get('data')
            if not data_core: return None

            room_data = None
            if isinstance(data_core.get('data'), list) and len(data_core.get('data')) > 0:
                room_data = data_core.get('data')[0]
            elif isinstance(data_core.get('user'), dict):
                room_data = data_core
            
            if not room_data: return None
            
            status = room_data.get('status')
            user = room_data.get('owner') or room_data.get("user")
            if not user: return None

            self.current_room_id = room_data.get('id_str')
            
            info = {
                'web_rid': self.live_id,
                'room_id': self.current_room_id,
                'title': room_data.get('title', ''),
                'user_id': user.get('id_str', ''),
                'sec_uid': user.get('sec_uid', ''),
                'nickname': user.get('nickname', 'æœªçŸ¥ç”¨æˆ·'),
                'avatar_url': get_safe_url(user.get('avatar_thumb')),
                'cover_url': get_safe_url(room_data.get('cover')),
                'user_count': room_data.get('user_count', 0), 
                'like_count': room_data.get('like_count', 0),
                'room_status': status,
                'live_status': 1,
                'start_follower_count': self.start_follower_count
            }
            logger.info(f"ğŸŸ¢ [LiveMan] ç›´æ’­ä¸­ | ğŸ  {info['nickname']}: {info['title']}")
            if self.db: await self.db.save_room_info(info)
            return info

        except Exception as e:
            logger.error(f"âŒ è·å–ç›´æ’­é—´çŠ¶æ€å¼‚å¸¸: {e}")
            return None

    async def start(self):
        logger.info(f"ğŸš€ å¯åŠ¨æŠ“å–: {self.live_id}")
        self.running = True
        
        try:
            # --- æ ¸å¿ƒåˆ†æ”¯é€»è¾‘ ---
            
            # åˆ†æ”¯ A: æé€Ÿæ¨¡å¼ï¼ˆMonitor å·²ç»ç»™äº† room_idï¼‰
            if self.initial_state and self.initial_state.get('room_id'):
                logger.info(f"âš¡ [æé€Ÿæ¨¡å¼] ä½¿ç”¨ Monitor æ•°æ®ç›´æ¥å¯åŠ¨: {self.live_id}")
                self.current_room_id = self.initial_state['room_id']
                
                # 1. æ„é€ ä¸´æ—¶æ•°æ®å¹¶å…¥åº“ï¼Œç¡®ä¿å­˜å‚¨æœ‰æ®å¯ä¾
                temp_info = {
                    'web_rid': self.live_id,
                    'room_id': self.current_room_id,
                    # ä¼˜å…ˆç”¨ Monitor æŠ“åˆ°çš„æ ‡é¢˜ï¼Œæ²¡æœ‰åˆ™ç”¨æ˜µç§°æ‹¼å‡‘
                    'title': self.initial_state.get('title') or f"{self.initial_state.get('nickname', 'ä¸»æ’­')}æ­£åœ¨ç›´æ’­",
                    'user_id': self.initial_state.get('uid', ''),
                    'sec_uid': self.initial_state.get('sec_uid', ''),
                    'nickname': self.initial_state.get('nickname', 'æœªçŸ¥ç”¨æˆ·'),
                    # ä¼˜å…ˆç”¨ Monitor æŠ“åˆ°çš„å°é¢ï¼Œæ²¡æœ‰åˆ™ç”¨å¤´åƒ
                    'cover_url': self.initial_state.get('cover_url') or self.initial_state.get('avatar_url', ''),
                    'avatar_url': self.initial_state.get('avatar_url', ''),
                    'live_status': 1, # å¼ºåˆ¶æ ‡è®°ä¸ºç›´æ’­ä¸­
                    'start_follower_count': self.start_follower_count,
                    'created_at': datetime.now()
                }
                
                if self.db:
                    await self.db.save_room_info(temp_info)
                    
                # 2. å¯åŠ¨åå°ä»»åŠ¡å»æ…¢æ…¢è·å–é«˜æ¸…è¯¦æƒ…
                asyncio.create_task(self._lazy_update_room_info())

            # åˆ†æ”¯ B: ä¼ ç»Ÿæ¨¡å¼ï¼ˆæ²¡æœ‰ room_idï¼Œå¿…é¡»é˜»å¡è¯·æ±‚ï¼‰
            else:
                room_info = await self.get_room_status()
                if not room_info:
                    logger.warning("âš ï¸ ç­‰å¾… 3ç§’ åé‡è¯•...")
                    await asyncio.sleep(3)
                    room_info = await self.get_room_status()
                    
                if not room_info:
                    logger.error("âŒ æ— æ³•è·å–æˆ¿é—´ä¿¡æ¯ï¼Œæ”¾å¼ƒå½•åˆ¶")
                    return
                # get_room_status å†…éƒ¨å·²ç»è®¾ç½®äº† self.current_room_id

            # --- å…¬å…±é€»è¾‘: è¿æ¥ WebSocket ---
            
            # åˆå§‹åŒ–æ¶ˆæ¯å¤„ç†å™¨
            self.handler = MessageHandler(
                live_id=self.live_id,
                room_id=self.current_room_id,
                db=self.db,
                gift_processor=self.gift_processor
            )

            await self._connectWebSocket()
            
        except Exception as e:
            logger.error(f"âŒ å½•åˆ¶ä»»åŠ¡å¼‚å¸¸é€€å‡º: {e}")
        finally:
            await self.stop()

    async def stop(self):
        self.running = False
        if self.ws: await self.ws.close()
        
        # ã€ä¿®æ”¹ã€‘åªæœ‰è‡ªå·±åˆ›å»ºçš„ session æ‰éœ€è¦å…³é—­
        # å…±äº«çš„ session ç”± main.py è´Ÿè´£å…³é—­
        if self._own_session and self.session:
            await self.session.close()

    async def _sendHeartbeat(self, ws):
        while self.running and not ws.closed:
            try:
                heartbeat = PushFrame(payload_type='hb').SerializeToString()
                await ws.send_bytes(heartbeat) 
                await asyncio.sleep(10)
            except asyncio.CancelledError:  # <--- æ–°å¢ï¼šæ”¶åˆ°åœæ­¢ä¿¡å·æ—¶ç›´æ¥é€€å‡ºå¾ªç¯
                break
            except Exception: 
                break

    async def _connectWebSocket(self):
        ttwid = await self.get_ttwid() or ""
        
        wss = ("wss://webcast100-ws-web-lq.douyin.com/webcast/im/push/v2/?app_name=douyin_web"
               "&version_code=180800&webcast_sdk_version=1.0.14-beta.0"
               "&update_version_code=1.0.14-beta.0&compress=gzip&device_platform=web&cookie_enabled=true"
               "&screen_width=1536&screen_height=864&browser_language=zh-CN&browser_platform=Win32"
               "&browser_name=Mozilla"
               "&browser_version=5.0%20(Windows%20NT%2010.0;%20Win64;%20x64)%20AppleWebKit/537.36%20(KHTML,"
               "%20like%20Gecko)%20Chrome/126.0.0.0%20Safari/537.36"
               "&browser_online=true&tz_name=Asia/Shanghai"
               f"&cursor=d-1_u-1_fh-7392091211001140287_t-1721106114633_r-1"
               f"&internal_ext=internal_src:dim|wss_push_room_id:{self.current_room_id}|wss_push_did:7319483754668557238"
               f"|first_req_ms:1721106114541|fetch_time:1721106114633|seq:1|wss_info:0-1721106114633-0-0|"
               f"wrds_v:7392094459690748497"
               f"&host=https://live.douyin.com&aid=6383&live_id=1&did_rule=3&endpoint=live_pc&support_wrds=1"
               f"&user_unique_id=7319483754668557238&im_path=/webcast/im/fetch/&identity=audience"
               f"&need_persist_msg_count=15&insert_task_id=&live_reason=&room_id={self.current_room_id}&heartbeatDuration=0")
        
        signature = generateSignature(wss)
        wss += f"&signature={signature}"
        
        headers = {
            "Cookie": f"ttwid={ttwid}",
            'User-Agent': self.user_agent,
        }

        try:
            # ã€é‡ç‚¹ 1ã€‘æ•è·è¿æ¥å»ºç«‹é˜¶æ®µçš„å¼‚å¸¸ï¼ˆå¦‚è¶…æ—¶ã€DNSé”™è¯¯ï¼‰
            async with self.session.ws_connect(wss, headers=headers, timeout=15) as ws:
                self.ws = ws
                logger.info("âœ… WebSocket è¿æ¥æˆåŠŸ")
                
                # å¯åŠ¨å¿ƒè·³ä»»åŠ¡
                hb_task = asyncio.create_task(self._sendHeartbeat(ws))
                
                try:
                    # ã€é‡ç‚¹ 2ã€‘æ¶ˆæ¯å¾ªç¯
                    async for msg in ws:
                        if msg.type == aiohttp.WSMsgType.BINARY:
                            await self._handle_binary_message(msg.data, ws)
                        elif msg.type in (aiohttp.WSMsgType.CLOSED, aiohttp.WSMsgType.ERROR):
                            logger.warning("âš ï¸ WebSocket è¿æ¥è¢«åŠ¨å…³é—­")
                            break
                except Exception as e:
                    # è¿™é‡Œæ•è·çš„æ˜¯ è¯»å–æ¶ˆæ¯è¿‡ç¨‹ä¸­çš„å¼‚å¸¸
                    logger.error(f"âŒ æ¶ˆæ¯è¯»å–å¾ªç¯å¼‚å¸¸: {e}")
                    # ä¸éœ€è¦ breakï¼Œå¼‚å¸¸å‘ç”Ÿåä¼šè‡ªåŠ¨è·³å‡º async for
                    
        except Exception as e:
            # è¿™é‡Œæ•è·çš„æ˜¯ è¿æ¥å»ºç«‹ æˆ– æ•´ä½“æµç¨‹ çš„å¼‚å¸¸
            logger.error(f"âŒ WebSocket è¿æ¥/è¿è¡Œå¼‚å¸¸: {e}")
            
        finally:
            # ã€é‡ç‚¹ 3ã€‘å…œåº•æ¸…ç†ï¼šæ— è®ºæ˜¯å› ä¸º returnã€break è¿˜æ˜¯ Exception é€€å‡ºï¼Œè¿™é‡Œéƒ½ä¼šæ‰§è¡Œ
            self.running = False # ç¡®ä¿ flag å…³é—­
            
            if hb_task:
                hb_task.cancel() # åœæ­¢å¿ƒè·³
                try:
                    await hb_task # ç­‰å¾…å¿ƒè·³åç¨‹çœŸæ­£ç»“æŸ
                except asyncio.CancelledError:
                    pass # å¿½ç•¥å–æ¶ˆå¼‚å¸¸

            if self.ws and not self.ws.closed:
                await self.ws.close() # ç¡®ä¿è¿æ¥å…³é—­
                
            logger.info(f"ğŸ‘‹ [LiveMan] å½•åˆ¶ä»»åŠ¡ç»“æŸ/é€€å‡º: {self.live_id}")

    async def _handle_binary_message(self, data, ws):
        try:
            package = PushFrame().parse(data)
            response = Response().parse(gzip.decompress(package.payload))
            
            if response.need_ack:
                ack = PushFrame(log_id=package.log_id, payload_type='ack',
                                payload=response.internal_ext.encode('utf-8')).SerializeToString()
                await ws.send_bytes(ack)
            
            for msg in response.messages_list:
                # ã€ä¿®æ”¹ã€‘å§”æ‰˜ç»™ Handler å¤„ç†
                if self.handler:
                    is_ended = await self.handler.handle(msg.method, msg.payload)
                    if is_ended:
                        self.running = False
                        await ws.close()
                        break
        except Exception: 
            pass
    async def _lazy_update_room_info(self):
        """åå°ä»»åŠ¡ï¼šå°è¯•è·å–æ›´è¯¦ç»†çš„ç›´æ’­é—´ä¿¡æ¯ï¼ˆé«˜æ¸…å°é¢ã€å‡†ç¡®æ ‡é¢˜ç­‰ï¼‰"""
        logger.info(f"â³ [LiveMan] å¯åŠ¨åå°è¯¦æƒ…åŒæ­¥: {self.live_id}")
        try:
            # å°è¯• 3 æ¬¡ï¼Œæ¯æ¬¡é—´éš”é€’å¢
            for i in range(5):
                if not self.running: break
                
                wait_time = 10 + (i * 5)
                await asyncio.sleep(wait_time)
                
                # è°ƒç”¨åŸæœ‰çš„è·å–é€»è¾‘ï¼Œå®ƒå†…éƒ¨ä¼šè‡ªåŠ¨è°ƒç”¨ db.save_room_info æ›´æ–°æ•°æ®åº“
                room_info = await self.get_room_status()
                
                if room_info:
                    logger.info(f"âœ¨ [LiveMan] è¯¦æƒ…é¡µä¿¡æ¯å·²åŒæ­¥: {room_info['title']}")
                    break # è·å–æˆåŠŸï¼Œé€€å‡ºé‡è¯•
        except Exception as e:
            logger.warning(f"âš ï¸ åå°åŒæ­¥è¯¦æƒ…å¤±è´¥: {e}")