# message_handler.py
import time
import logging
from datetime import datetime, timedelta
from protobuf.douyin import *
from liveMan_utils import get_safe_url

logger = logging.getLogger("MsgHandler")

class MessageHandler:
    def __init__(self, live_id, room_id, db, gift_processor):
        self.live_id = live_id
        self.room_id = room_id
        self.db = db
        self.gift_processor = gift_processor
        self.last_seq_state = None       
        # --- é¢‘ç‡æ§åˆ¶çŠ¶æ€ ---
        self.last_like_time = 0
        self.last_seq_time = 0
        self.THROTTLE_INTERVAL = 2 # 120ç§’é™åˆ¶

    async def handle(self, method, payload):
        """
        ç»Ÿä¸€æ¶ˆæ¯åˆ†å‘å…¥å£
        Returns:
            bool: True è¡¨ç¤ºæ”¶åˆ°ä¸‹æ’­ä¿¡å·(ControlMessage=3)ï¼Œå»ºè®®æ–­å¼€è¿æ¥ï¼›å¦åˆ™ False
        """
        try:
            if method == 'WebcastChatMessage':
                await self._parse_chat(payload)
            elif method == 'WebcastGiftMessage':
                await self._parse_gift(payload)
            elif method == 'WebcastRoomUserSeqMessage':
                await self._parse_user_seq(payload)
            elif method == 'WebcastLikeMessage':
                await self._parse_like(payload)
            elif method == 'WebcastControlMessage':
                return await self._parse_control(payload)
            elif method == 'WebcastLinkMicBattleFinishMethod':
                await self._parse_pk_finish(payload)
        except Exception as e:
            # å•ä¸ªæ¶ˆæ¯è§£æå¤±è´¥ä¸åº”å½±å“æ•´ä½“
            logger.debug(f"âš ï¸ æ¶ˆæ¯è§£æå¼‚å¸¸ [{method}]: {e}")
        
        return False

    async def _parse_control(self, payload):
        try:
            message = ControlMessage().parse(payload)
            if message.status == 3:
                logger.info(f"ğŸ›‘ [ControlMsg] æ”¶åˆ°ä¸‹æ’­ä¿¡å· (Room: {self.room_id})")
                if self.db and self.room_id:
                    await self.db.set_room_ended(self.room_id)
                return True # Signal to stop
        except Exception: pass
        return False

    async def _parse_chat(self, payload):
        try:
            message = ChatMessage().parse(payload)
            user = message.user
            
            # --- æ–°å¢ï¼šæ¶ˆè´¹ç­‰çº§ ---
            pay_grade = 0
            pay_grade_icon = ""
            try:
                if hasattr(user, 'pay_grade'):
                    pay_grade = user.pay_grade.level
                    pay_grade_icon = get_safe_url(user.pay_grade.new_im_icon_with_level)
            except: pass
            
            # --- ç²‰ä¸å›¢ä¿¡æ¯ ---
            fans_club_icon = ""
            fans_club_level = 0
            try:
                fans_club_icon = user.fans_club.data.badge.icons[4].url_list_list[0]
                fans_club_level = user.fans_club.data.level
            except: pass
            
            event_ts = getattr(message, 'event_time', 0)
            
            if event_ts == 0:
                event_time_obj = datetime.now()
            else:
                # åŠ ä¸Š8å°æ—¶è½¬ä¸ºåŒ—äº¬æ—¶é—´
                event_time_obj = datetime.utcfromtimestamp(event_ts) + timedelta(hours=8)
            
            event_time_str = event_time_obj.strftime('%Y-%m-%d %H:%M:%S')
            
            chat_data = {
                'web_rid': self.live_id,
                'room_id': self.room_id,
                'user_id': str(user.id),
                'user_name': user.nick_name,
                'gender': getattr(user, 'gender', 0),
                'content': message.content,
                'sec_uid': getattr(user, 'sec_uid', ''),
                'avatar_url': get_safe_url(user.avatar_thumb),
                'pay_grade': pay_grade,          # âœ… æ–°å¢
                'pay_grade_icon': pay_grade_icon,
                'fans_club_icon': fans_club_icon,
                'fans_club_level': fans_club_level,
                'event_time': event_time_str,
                'created_at': datetime.now()
            }
            if self.db: 
                await self.db.insert_chat(chat_data)
        except Exception: pass

    async def _parse_gift(self, payload):
        try:
            message = GiftMessage().parse(payload)
            user = message.user
            gift = message.gift
            group_id = getattr(message, 'group_id', '')          
            group_count = message.group_count
            
            # --- æ–°å¢ï¼šæ¶ˆè´¹ç­‰çº§ ---
            pay_grade = 0
            pay_grade_icon = ""
            try:
                if hasattr(user, 'pay_grade'):
                    pay_grade = user.pay_grade.level
                    pay_grade_icon = get_safe_url(user.pay_grade.new_im_icon_with_level)
            except: pass
            
            # --- æ–°å¢ï¼šç²‰ä¸å›¢ç­‰çº§ ---
            fans_club_icon = ""
            fans_club_level = 0
            try:
                fans_club_icon = user.fans_club.data.badge.icons[4].url_list_list[0]
                fans_club_level = user.fans_club.data.level
            except: pass
            
            gift_icon_url = ""
            try:
                gift_icon_url = message.gift.icon.url_list_list[0]
            except: pass
            
            send_time_ms = getattr(message, 'send_time', int(time.time() * 1000))
            
            if send_time_ms == 0:
                send_time_obj = datetime.now()
            else:
                send_time_obj = datetime.utcfromtimestamp(send_time_ms / 1000) + timedelta(hours=8)
            
            # æ ¼å¼åŒ–æ—¶é—´å­—ç¬¦ä¸²
            send_time_str = send_time_obj.strftime('%Y-%m-%d %H:%M:%S.%f')[:-3]
            
            gift_data = {
                'web_rid': self.live_id,
                'room_id': self.room_id,
                'user_id': str(user.id),
                'user_name': user.nick_name,
                'gender': getattr(user, 'gender', 0),
                'sec_uid': getattr(user, 'sec_uid', ''),
                'avatar_url': get_safe_url(user.avatar_thumb),
                'pay_grade': pay_grade,          # âœ… æ–°å¢
                'pay_grade_icon': pay_grade_icon,
                'fans_club_level': fans_club_level, # âœ… æ–°å¢
                'fans_club_icon': fans_club_icon,
                'gift_icon_url' : gift_icon_url,
                'gift_id': str(gift.id),
                'gift_name': gift.name,
                'diamond_count': gift.diamond_count,
                'combo_count': message.combo_count,
                'group_count': group_count,
                'group_id': str(group_id),
                'repeat_end': getattr(message, 'repeat_end', 0),
                'trace_id': getattr(message, 'trace_id', ''),
                'send_time': send_time_str,
                'created_at': datetime.now()
            }
            
            if self.gift_processor: 
                await self.gift_processor.process_gift(gift_data)
        except Exception: pass

    async def _parse_user_seq(self, payload):
        """
        ç›´æ’­é—´ç»Ÿè®¡ä¿¡æ¯ï¼ˆåœ¨çº¿äººæ•°ã€æ¦œå•ï¼‰
        """
        now = time.time()
        # é¢‘ç‡æ§åˆ¶
        if now - self.last_seq_time < self.THROTTLE_INTERVAL:
            return
        
        # è®¡ç®—å®é™…çš„æ—¶é—´é—´éš” (å¯èƒ½ä¸æ˜¯ç²¾ç¡®çš„5.0ç§’ï¼Œç”¨å®é™…å·®å€¼æ›´å‡†)
        time_diff = now - self.last_seq_time if self.last_seq_time > 0 else 0
        self.last_seq_time = now

        try:
            message = RoomUserSeqMessage().parse(payload)
            
            # å½“å‰å€¼
            current_online = message.total       # å½“å‰åœ¨çº¿
            current_total = message.total_user   # ç´¯è®¡è§‚çœ‹
            
            stats = {
                'user_count': current_online,
                'total_user': current_total
            }

            # --- ã€æ–°å¢ã€‘æ ¸å¿ƒè®¡ç®—é€»è¾‘ ---
            inc_data = {}
            
            if self.last_seq_state:
                prev_online = self.last_seq_state['online']
                prev_total = self.last_seq_state['total']
                
                # 1. è®¡ç®—è¿›åœº (Entries)
                new_entries = current_total - prev_total
                if new_entries < 0: new_entries = 0 # å¼‚å¸¸æ•°æ®é˜²æŠ¤

                # 2. è®¡ç®—ç¦»åœº (Exits)
                # ç¦»åœº = è¿›åœº - åœ¨çº¿å‡€å¢é‡
                net_growth = current_online - prev_online
                new_exits = new_entries - net_growth
                if new_exits < 0: new_exits = 0 # å¼‚å¸¸æ•°æ®é˜²æŠ¤
                
                # 3. è®¡ç®—äº§ç”Ÿçš„æ€»è§‚çœ‹æ—¶é•¿ (Total Watch Time Increment)
                # è¿‘ä¼¼è®¡ç®—ï¼šå½“å‰åœ¨çº¿äººæ•° * è¿‡å»äº†å¤šå°‘ç§’
                # æ›´ç²¾ç¡®çš„ç§¯åˆ†ç®—æ³•æ˜¯ï¼š(ä¸Šåˆ»äººæ•° + è¿™åˆ»äººæ•°) / 2 * æ—¶é—´é—´éš”
                # è¿™é‡Œé‡‡ç”¨ç®€å•çš„é«˜é¢‘è¿‘ä¼¼ï¼š
                duration_inc = current_online * time_diff

                # å‡†å¤‡æ›´æ–°åˆ°æ•°æ®åº“çš„å¢é‡æ•°æ®
                inc_data = {
                    'real_time_entries': new_entries, # è¿™ä¸€ç¬é—´è¿›åœº
                    'real_time_exits': new_exits,     # è¿™ä¸€ç¬é—´ç¦»åœº
                    'total_watch_time_sec': duration_inc # ç´¯è®¡æ€»æ—¶é•¿(ç§’)
                }
                
                # è®°å½•ä¸€ä¸‹è°ƒè¯•æ—¥å¿—
                # logger.info(f"ğŸ“Š 5sæµè½¬: è¿›+{new_entries} ç¦»-{new_exits} | ç´¯è®¡æ—¶é•¿+{duration_inc:.1f}s")

            # æ›´æ–°çŠ¶æ€ä¾›ä¸‹ä¸€æ¬¡ä½¿ç”¨
            self.last_seq_state = {
                'online': current_online,
                'total': current_total,
                'time': now
            }

            # æ¦œå•è§£æ (ä¿æŒåŸæœ‰é€»è¾‘)
            ranks_source = getattr(message, 'ranks_list', getattr(message, 'ranksList', []))
            if ranks_source:
                rank_data = []
                for item in ranks_source:
                    user = item.user
                    if not user: continue
                    rank_data.append({
                        "uid": str(user.id),
                        "nickname": user.nick_name,
                        "avatar": get_safe_url(user.avatar_thumb),
                        "rank": item.rank,
                    })
                stats['ranks'] = rank_data

            if self.db and self.room_id:
                # 1. æ›´æ–°è¦†ç›–å‹æ•°æ® (åœ¨çº¿äººæ•°ã€æ¦œå•) -> rooms è¡¨
                await self.db.update_room_stats(self.room_id, stats)
                
                # 2. æ›´æ–°å¢é‡æ•°æ® (ç´¯è®¡æ—¶é•¿ç­‰) -> rooms è¡¨
                if inc_data:
                    await self.db.increment_room_stats(self.room_id, inc_data)

                # âŒ å·²ç§»é™¤ï¼šå†™å…¥ live_stats æ—¶åºé›†åˆçš„æ“ä½œ

        except Exception as e:
            logger.error(f"âš ï¸ è§£æUserSeqå¼‚å¸¸: {e}")

    async def _parse_like(self, payload):
        """
        ç‚¹èµä¿¡æ¯
        ã€é¢‘ç‡æ§åˆ¶ã€‘120s ä¸€æ¬¡
        """
        now = time.time()
        if now - self.last_like_time < self.THROTTLE_INTERVAL:
            return
        self.last_like_time = now

        try:
            message = LikeMessage().parse(payload)
            if self.db and self.room_id:
                # logger.info(f"â¤ï¸ [Like] æ›´æ–°ç‚¹èµæ•°: {message.total}")
                await self.db.update_room_stats(self.room_id, {
                    'like_count': message.total
                })
        except Exception: pass

    async def _parse_pk_finish(self, payload):
        try:
            message = LinkMicBattleFinishMethod().parse(payload)
            if message.info.status != 2: return

            battle_id = str(message.info.battle_id)
            start_time = message.info.start_time_ms
            
            scores_map = {}
            has_valid_win_status = False
            
            for s in message.scores:
                uid = str(s.user_id)
                win_status = s.win_status
                if win_status in [1, 2]: has_valid_win_status = True
                scores_map[uid] = {"score": s.score, "win_status": win_status, "rank": s.rank}

            contrib_map = {}
            for c_group in message.contributors:
                anchor_id = str(c_group.anchor_id)
                top_list = []
                for item in c_group.list[:3]: 
                    top_list.append({
                        "user_id": str(item.id),
                        "nickname": item.nickname,
                        "avatar": get_safe_url(item.avatar),
                        "score": item.score,
                        "rank": item.rank if item.rank else 0
                    })
                contrib_map[anchor_id] = top_list

            total_anchors = 0
            for army in message.anchors: total_anchors += len(army.list)

            mode_type = "free_for_all"
            if has_valid_win_status: mode_type = "team_battle"
            elif total_anchors == 2: mode_type = "team_battle"

            teams_map = {} 
            for army in message.anchors:
                for anchor_item in army.list:
                    if not anchor_item.user: continue
                    uid = str(anchor_item.user.id)
                    score_info = scores_map.get(uid, {})
                    contributors = contrib_map.get(uid, [])
                    
                    anchor_data = {
                        "user_id": uid,
                        "nickname": anchor_item.user.nickname,
                        "avatar": get_safe_url(anchor_item.user.avatar_thumb),
                        "score": score_info.get("score", 0),
                        "rank": score_info.get("rank", 0),
                        "contributors": contributors
                    }

                    if has_valid_win_status:
                        team_id = str(score_info.get("win_status"))
                    else:
                        team_id = uid

                    if team_id not in teams_map:
                        teams_map[team_id] = {"team_id": team_id, "win_status": score_info.get("win_status", 0), "anchors": []}
                    teams_map[team_id]["anchors"].append(anchor_data)

            final_teams = list(teams_map.values())
            if mode_type == "free_for_all":
                final_teams.sort(key=lambda t: t["anchors"][0]["rank"] if t["anchors"] else 999)

            pk_result = {
                "battle_id": battle_id,
                "room_id": self.room_id,
                "start_time": datetime.fromtimestamp(start_time / 1000) if start_time else datetime.now(),
                "mode": mode_type, 
                "created_at": datetime.now(),
                "teams": final_teams
            }

            logger.info(f"ğŸ [PKç»“ç®—] ID:{battle_id} | æ¨¡å¼:{mode_type}")
            
            if self.db:
                await self.db.save_pk_result(pk_result)

        except Exception as e:
            logger.error(f"âŒ è§£æPKç»“ç®—æ¶ˆæ¯å¼‚å¸¸: {e}")